@@ -67,12 +67,12 @@ REPOSITORY
     <https://github.com/tupinek/Random-Set>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2013-2016
+     © Michal Josef Špaček 2013-2016
      BSD 2-Clause License
 
 VERSION
